fix spacing on dropdown items

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -34,14 +34,14 @@ button {
     font-weight: 600;
     padding-top: 10px;
     padding-bottom: 5px;
-    padding-left: 30px;
+    padding-left: 40px;
     margin: 0px;
 }
 
 .locations > h4, .amenities > h4 {
     font-weight: 400;
     font-size: 14px;
-    padding-left: 30px;
+    padding-left: 40px;
     margin: 0px;
 }
 
@@ -49,7 +49,7 @@ button {
     background-color: #FAFAFA;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    line-height: 200%;
+    line-height: 160%;
     padding-bottom: 30px;
     padding-top: 20px;
     position: relative;
@@ -66,13 +66,14 @@ button {
 }
 
 .popover span {
-    margin-left: 30px;
+    margin-left: 5px;
 }
 
 .popover h2 {
     font-size: 16px;
     margin: 0px;
     padding-top: 10px;
+    margin-left: -10px;
 }
 
 .locations:hover .popover,
